--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ main {
 }
 
 #landing-image {
-  background: url(https://assets.entrepreneur.com/content/3x2/2000/20191009140007-GettyImages-1053962188.jpeg?crop=4:3);
+  background: url(https://images.pexels.com/photos/752525/pexels-photo-752525.jpeg?auto=compress&cs=tinysrgb&w=600);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
